20210325	The mb89352 SCSI controller uses its own subsystem for debug
		messages.
20210327	Adding an empty RISC-V CPU skeleton [again].
		Implementing enough of the mb89352 to allow OpenBSD/luna88k
		to boot with SCSI (both the boot loader and the kernel)!
20210401	Applying a patch from George Matsumura to make things build
		better on Linux: __attribute__((__packed__));  in bootblock.h.
20210405	Adding hardcoded boot_unit=0 and boot_partition=0 NVRAM
		variables to the LUNA-88K machine, allowing OpenBSD/luna88k
		to boot from disk without asking for root and swap partitions.
		Adding 'R' (upper-case) disk image prefix, as a shorthand for
		creating temporary overlays.
20210407	Code for idling the host processor has been moved out from
		individual CPU implementations to the main emul loop.
		Implementing an X11 mouse pointer grab mechanism. Grab is
		activated by clicking in a framebuffer window, and released
		using left CTRL + ALT. When grab is active, the host mouse
		cursor is hidden and the window caption changes to indicate
		that grab is active.
20210408	Implementing an unusual 88K "not_maxneg_nor_zero" bcnd
		condition.
20210409	Moving the LUNA88K framebuffer to its own device file.
		Beginning to implement the LUNA88K front panel LCD.
		Also fixing a bug where the rightmost pixel (or 8 pixels in
		the case of monochrome) were not drawn.
20210410	Also check for X11R7 in the configure script, in addition
		to X11R6.
20210417	Porting over i960CA disassembly from the C++ framework.
20210418	More i960 stuff, including re-adding the (so far dummy)
		Cyclone VH machine.
		Assuming availabilty of __func__ (C99 standard).
20210422	Enabling idle detection for OpenBSD/luna88k, which uses a
		bcnd.n instruction. A hack, but it seems to work.
		Fixing a bug where console input could randomly be lost when
		idling, if there were multiple emulated serial ports.

==============  RELEASE 0.7.0  ==============
