@@ -2670,6 +2670,20 @@ X(to_be_translated)
 			}
 			break;
 
+		case 0x3a:	/*  tcnd  */
+			/*
+			 *  TODO. For now, just treat "tcnd ne0, r0, xxx" as
+			 *  a nop (since r0 will always be equal to zero).
+			 *  Perhaps it is used as a way to flush some internal
+			 *  CPU state?
+			 */
+			if (s1 == M88K_ZERO_REG && d == 0xc /* ne0 */) {
+				ic->f = instr(nop);
+			} else {
+				goto bad;
+			}
+			break;
+
 		default:goto bad;
 		}
 		break;
